--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     
-
-
     <!-- Load Jasmine Framework -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine.js"
 		integrity="sha256-PePX8Jc4TIxzzVz0Qe4NsH3OUU8+Y49DBWvYgggNqkY=" crossorigin="anonymous"></script>
@@ -23,9 +21,9 @@
     <!-- Load jquery -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <!-- Load Scripts -->
-	<script src="spec/mainloopspec.js"></script>
+	<script src="spec/gameloopspec.js"></script>
     <!-- Load Tests -->
-    <script type="text/javascript" src="scripts/mainlooo.js"></script>
+    <script type="text/javascript" src="scripts/gameloop.js"></script>
 
 </body>
 </html>
