added contect style and start of jquery

--- a/index.html
+++ b/index.html
@@ -2,59 +2,56 @@
 <html lang="en">
 
 <head>
+    <meta name="author" content="mlr314159">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>LOP</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
-
-
 </head>
 
 <body>
+    <h1> Lancishire Oldham Poker - A Texas hold 'em simulation</h1>
+   
 	<section class="gamecard" id="gamemater">
 		<div id="commoncardsd">
 			<p id="commoncardsp">Comunal Cards are  cards are :
-            <spane id="ccard1" class="playingcard">c5</spane> <spane id="ccard2" class="playingcard">c6</spane> <spane id="ccard3" class="playingcard">c5</spane>
-           ---- <spane id="ccard4" class="playingcard">c6</spane> -- <spane id="ccard5" class="playingcard">c5</spane>
-            
+            <spane id="ccard1" class="playingcard">??</spane> <spane id="ccard2" class="playingcard">??</spane> <spane id="ccard3" class="playingcard">??</spane>
+           -- <spane id="ccard4" class="playingcard">??</spane> - <spane id="ccard5" class="playingcard">??</spane>
+            <br>The Pot is: <span id="pottotals">24</span> tokens
             </p>
-		</div>
-		<div id="commenpotd">
-			<p id="commenpotp">The Pot is:<span id="pottotals">24</span></p>
 		</div>
 	</section>
 
 	<article class="playerboards" id="players">
-		<section class="playerboard playerboard1s" id="player1s">
-        <div id="player2d">
-            <p>Player2 :  cards are : <spane id="p3card1" class="playingcard" >c5</spane> <spane id="p3card2" class="playingcard" >c6</spane> : chips=100 : minimum bid = 2</p>
-        </div>
-		</section>
-		<section class="playerboard playerboard2" id="player2">
+		<section class="playerboardinv1 playerboard playerboard1s meme" id="player1s meme">
         <div id="player1d">
-            <p>Player2 :  cards are : <spane id="p3card1" class="playingcard" >c5</spane> <spane id="p3card2" class="playingcard" >c6</spane> : chips=100 : minimum bid = 2</p>
+            <p>Player1 :<span class="playername1">aaa</span><br>Cards are : <spane id="p3card1" class="playingcard" >??</spane> <spane id="p3card2" class="playingcard" >??</spane> : chips=100 : current bid = 2</p>
         </div>
 		</section>
-		<section class="playerboard playerboard3" id="player3">
+		<section class="playerboardinv2 playerboard playerboard2" id="player2">
+        <div id="player2d">
+            <p>Player2 :<span class="playername2">aaa</span><br>Cards are : <spane id="p3card1" class="playingcard" >??</spane> <spane id="p3card2" class="playingcard" >??</spane> : chips=100 : current bid = 2</p>
+        </div>
+		</section>
+		<section class="playerboardinv3 playerboard playerboard3" id="player3">
         <div id="player3d">
-            <p>Player3 : cards are : <spane id="p3card1" class="playingcard" >c5</spane> <spane id="p3card2" class="playingcard" >c6</spane> : chips=100 : minimum bid = 2</p>
+            <p>Player3 :<span class="playername3">aaa</span><br>Cards are : <spane id="p3card1" class="playingcard" >??</spane> <spane id="p3card2" class="playingcard" >??</spane> : chips=100 : current bid = 2</p>
         </div>
 		</section>
-		<section class="playerboard playerboard4" id="player4">
+		<section class="playerboardinv4 playerboard playerboard4" id="player4">
         <div id="player4d">
-            <p>Player4 :  cards are : <spane id="p3card1" class="playingcard" >c5</spane> <spane id="p3card2" class="playingcard" >c6</spane> : chips=100 : minimum bid = 2</p>
+            <p>Player4 :<span class="playername4">aaa</span><br>Cards are : <spane id="p3card1" class="playingcard" >??</spane> <spane id="p3card2" class="playingcard" >??</spane> : chips=100 : current bid = 2</p>
         </div>
 		</section>
-		<section class="playerboard playerboard5" id="player5">
+		<section class="playerboardinv5 playerboard playerboard5" id="player5">
         <div id="player5d">
-            <p>Player5 :  cards are : <spane id="p5card1" class="playingcard" >c5</spane> <spane id="p5card2" class="playingcard" >c6</spane> : chips=100 : minimum bid = 2</p>
+            <p>Player5 :<span class="playername4">aaa</span><br>Cards are : <spane id="p5card1" class="playingcard" >??</spane> <spane id="p5card2" class="playingcard" >??</spane> : chips=100 : current bid = 2</p>
         </div>
 		</section>
-		<section class="playerboard playerboard6" id="player6">
+		<section class="playerboardinv6 playerboard playerboard6" id="player6">
         <div id="player6d">
-            <p>Player6 : cards are : <spane id="p6card1" class="playingcard" >c5</spane> <spane id="p6card2" class="playingcard" >c6</spane> : chips=100 : minimum bid = 2</p>
+            <p>Player6 :<span class="playername6">aaa</span><br>Cards are : <spane id="p6card1" class="playingcard" >??</spane> <spane id="p6card2" class="playingcard" >??</spane> : chips=100 : current bid = 2</p>
         </div>
 		</section>
 	</article>
